updated styles of the asset cards

--- a/public/assets.html
+++ b/public/assets.html
@@ -62,28 +62,28 @@
 				<div class="row">
 					<div class="col-4">
 			  		<div class="asset">
-						<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/rey_square.png" alt="Rey">
+						<img class="asset-image" src="http://image.ibb.co/mrmVQJ/fox.jpg" alt="fox">
 						<div>
-				  		<p class="asset-content"><strong>Rey</strong></p>
-				  		<p class="asset-content">Protagonist, from Jakku</p>
+				  		<p class="asset-content"><strong>Fox</strong></p>
+				  		<p class="asset-content">fox sleeping on top of a log in neighborhood</p>
 						</div>
 			  		</div>
 					</div>
 					<div class="col-4">
 			  		<div class="asset">
-						<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/finn_square.png" alt="Finn">
+						<img class="asset-image" src="https://image.ibb.co/iXGTRm/lavendar.jpg" alt="lavendar">
 						<div>
-				  		<p class="asset-content"><strong>Finn</strong></p>
-				  		<p class="asset-content">Stormtropper, befriends Rey</p>
+				  		<p class="asset-content"><strong>Lavendar</strong></p>
+				  		<p class="asset-content">Field of beautiful lavendar with bees</p>
 						</div>
 			  		</div>
 					</div>
 					<div class="col-4">
 			  		<div class="asset">
-						<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/kylo_square.png" alt="KyloRen">
+						<img class="asset-image" src="https://image.ibb.co/cFzs5J/frog.jpg" alt="frog">
 						<div>
-				  		<p class="asset-content"><strong>Kylo Ren</strong></p>
-				  		<p class="asset-content">Main villain, or is he?</p>
+				  		<p class="asset-content"><strong>Frog</strong></p>
+				  		<p class="asset-content">Little colorful frog, probably poisonous</p>
 						</div>
 			  		</div>
 					</div>
@@ -92,28 +92,28 @@
 		  		<div class="row">
 					<div class="col-4">
 			  			<div class="asset">
-							<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/poe_square.png" alt="Poe">
+							<img class="asset-image" src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon">
 							<div>
-				  				<p class="asset-content"><strong>Poe</strong></p>
-				  				<p class="asset-content">Pilot for the resistance</p>
+				  				<p class="asset-content"><strong>Antelope Canyon</strong></p>
+				  				<p class="asset-content">Rocks that look like waves.  Can't wait to see this place.</p>
 							</div>
 			  			</div>
 						</div>
 						<div class="col-4">
 			  			<div class="asset">
-							<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/chewbacca_square.png" alt="Chewbacca">
+							<img class="asset-image" src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids">
 							<div>
-				  				<p class="asset-content"><strong>Chewbacca</strong></p>
-				  				<p class="asset-content">A great first mate</p>
+				  				<p class="asset-content"><strong>Orchids</strong></p>
+				  				<p class="asset-content">Beautiful flowers.  So grateful we have a couple of these.</p>
 							</div>
 			  			</div>
 						</div>
 						<div class="col-4">
 			  			<div class="asset">
-							<img class="asset-image" src="https://tf-assets-prod.s3.amazonaws.com/tf-curric/WEB-DEV-001/2.6.3_challenge_responsive_layout/yoda_square.png" alt="Yoda">
+							<img class="asset-image" src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca">
 			  				<div>
-				  				<p class="asset-content"><strong>Yoda</strong></p>
-				  				<p class="asset-content">Wise old Jedi master</p>
+				  				<p class="asset-content"><strong>BWCA</strong></p>
+				  				<p class="asset-content">One of my favorite places in the world.</p>
 							</div>
 			  			</div>
 					</div>
