updated styles for create account form

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 		</header>
 	</div>
 	<section role="region">
-		<div id="accountoverlay" class="overlay">
+		<div id="accountoverlay">
 			<div class="addAccount" id="addAccountForm">
 				<form class="account-form">
 					<ul class="flex-outer">
@@ -81,7 +81,7 @@
 		</div>
 	</section>
 	<section role="region">
-		<div id="childoverlay" class="overlay">
+		<div id="childoverlay">
 			<div class="addChild" id="addChildForm">
 				<form class="child-age-form">
 					<ul class="flex-outer">
@@ -115,6 +115,10 @@
 						<li>
 						<label for="date-uploaded">Today's Date</label>
 						<input type="text" id="date-uploaded" placeholder="Enter Today's Date">
+						</li>
+						<li>
+							<label for="notes">Notes</label>
+							<input type="text" id="first-name" placeholder="Notes">
 						</li>
 						<li>
 							<label for="image">Image</label>
