completed writing out the pseudocode for the functions, added the searchresults.html file

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,11 @@
 						</li>
 						<li>
 							<label for="notes">Notes</label>
-							<input type="text" id="first-name" placeholder="Notes">
+							<input type="text" id="notes" placeholder="Notes">
+						</li>
+						<li>
+							<label for="drawer-title">Drawer Title</label>
+							<input type="text" id="drawer-title" placeholder="Drawer Title">
 						</li>
 						<li>
 							<label for="image">Image</label>
@@ -140,7 +144,7 @@
 						<p class="form-title">Create Drawer</p>
 						<li>
 						<label for="drawer-name">Drawer Name</label>
-						<input type="text" id="first-name" placeholder="Drawer Name">
+						<input type="text" id="drawer-name" placeholder="Drawer Name">
 						</li>
 						<li>
 						<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
