--- a/public/searchresults.html
+++ b/public/searchresults.html
@@ -8,8 +8,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Overlock|Open+Sans:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="app.js"></script>
-		<script type="text/javascript" src="client.js"></script>		
+		<script type="text/javascript" src="client.js"></script>
 	</head>
 <body>
 	<div class="topnav" role="navigation" id="responsivetopnav">
@@ -49,17 +50,7 @@
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
-			<h2 class="web-resource">Web Resource Links</h2>
+			<h2>Support your children.  Keep all the memories.</h2>
 		</header>
-	</div>
-	<main role="main">
-		<div class="tab">
-				<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Stella </br> 7 years old </button>
-				<button class="tablinks" onclick="openChild(event, 'Child2')">Finn </br> 10 years old</button>
-		</div>		  
-		<div id="Child1" class="tabcontent">
-		</div>		  
-		<div id="Child2" class="tabcontent">
-		</div>		  
-	</main>	
+    </div>
 </body>
