--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content">
+				<div class="dropdown-content child-drop">
 					<a href="#">Child 1</a>
 					<a href="#">Child 2</a>
 					<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content">
+				<div class="dropdown-content asset-drop">
 					<a href="#">Drawer 1</a>
 					<a href="#">Drawer 2</a>
 					<a onclick="assetOn()" href="#"><i class="fas fa-upload"></i> Upload</a>
@@ -87,8 +87,8 @@
 					<ul class="flex-outer">
 						<p class="form-title">Add New Child</p>
 						<li>
-						<label for="first-name">First Name</label>
-						<input type="text" id="first-name" placeholder="Enter child's first name here">
+						<label for="child-first-name">First Name</label>
+						<input type="text" id="child-first-name" placeholder="Enter child's first name here">
 						</li>
 						<li>
 						<label for="birth-date">Birth Date</label>
