--- a/public/searchresults.html
+++ b/public/searchresults.html
@@ -87,7 +87,7 @@
 						<p class="form-title">Add New Child</p>
 						<li>
 						<label for="first-name">First Name</label>
-						<input type="text" id="first-name" placeholder="Enter child's first name here">
+						<input type="text" id="child-first-name" placeholder="Enter child's first name here">
 						</li>
 						<li>
 						<label for="birth-date">Birth Date</label>
@@ -109,7 +109,7 @@
 						<p class="form-title">Upload File</p>
 						<li>
 						<label for="title">Title</label>
-						<input type="text" id="first-name" placeholder="Title">
+						<input type="text" id="title" placeholder="Title">
 						</li>
 						<li>
 						<label for="date-uploaded">Today's Date</label>
