--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -159,7 +159,7 @@
 		</div>	
 		<div id="profDropdown" class="dropdown-childProfile">
 			<a href="#"><i class="fas fa-edit"></i> Edit</a>
-			<a href="#"><i class="fas fa-minus-circle"></i> Delete</a>
+			<a class="child-profile-delete" href="#"><i class="fas fa-minus-circle"></i> Delete</a>
 		</div>	  
 		<div id="Stella" class="tabcontent">
 		</div>		  
