updatated styles and functions to display child profiles

--- a/public/assets.html
+++ b/public/assets.html
@@ -24,9 +24,9 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content">
-					<a href="#">Child 1</a>
-					<a href="#">Child 2</a>
+				<div class="dropdown-content child-dropbtn">
+					<!-- <a href="#">Child 1</a>
+					<a href="#">Child 2</a> -->
 					<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 				</div>
 		</div>
@@ -155,11 +155,11 @@
 	<main role="main">
 		<div class="tab dropdown-asset">
 				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer1')">Drawer 1</button>
-					<div id="assetDropdown" class="dropdown-asset">
-						<a href="#"><i class="fas fa-edit"></i> Edit</a>
-						<a class="asset-delete" href="#"><i class="fas fa-minus-circle"></i> Delete</a>
-					</div>
 				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer2')">Drawer 2</button>
+		</div>
+		<div id="assetDropdown" class="dropdown-asset">
+			<a href="#"><i class="fas fa-edit"></i> Edit</a>
+			<a class="asset-delete" href="#"><i class="fas fa-minus-circle"></i> Delete</a>
 		</div>
 		<div id="Drawer1" class="assettabcontent">
 			<section role="region">
