--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -24,9 +24,9 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content">
-					<a href="#">Child 1</a>
-					<a href="#">Child 2</a>
+				<div class="dropdown-content child-dropbtn">
+					<!-- <a href="#">Child 1</a>
+					<a href="#">Child 2</a> -->
 					<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 				</div>
 		</div>
@@ -154,8 +154,8 @@
 	</section>
 	<main role="main">
 		<div class="tab dropdown-prof">
-				<button class="tablinks dropbtn-prof" onclick="editProf(), openChild(event, 'Stella')">Stella </br> 7 years old </button>
-				<button class="tablinks dropbtn-prof" onclick="editProf(), openChild(event, 'Finn')">Finn </br> 10 years old</button>
+			<!-- <button class="tablinks dropbtn-prof" onclick="editProf(), openChild(event, 'Stella')">Stella </br> 7 years old </button>
+			<button class="tablinks dropbtn-prof" onclick="editProf(), openChild(event, 'Finn')">Finn </br> 10 years old</button> -->
 		</div>	
 		<div id="profDropdown" class="dropdown-childProfile">
 			<a href="#"><i class="fas fa-edit"></i> Edit</a>
