--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content child-drop">
-					<a href="#">Child 1</a>
-					<a href="#">Child 2</a>
+				<div class="dropdown-content child-droptn">
+					<!-- <a href="#">Child 1</a>
+					<a href="#">Child 2</a> -->
 					<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 				</div>
 		</div>
