--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content child-droptn">
+				<div class="dropdown-content child-dropbtn">
 					<!-- <a href="#">Child 1</a>
 					<a href="#">Child 2</a> -->
 					<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content asset-drop">
+				<div class="dropdown-content asset-dropbtn">
 					<a href="#">Drawer 1</a>
 					<a href="#">Drawer 2</a>
 					<a onclick="assetOn()" href="#"><i class="fas fa-upload"></i> Upload</a>
