--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -32,7 +32,7 @@
 		</div>
 		<div class="dropdown">
 			<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
-				<div class="dropdown-content">
+				<div class="dropdown-content asset-dropbtn">
 					<a href="#">Drawer 1</a>
 					<a href="#">Drawer 2</a>
 					<a onclick="assetOn()" href="#"><i class="fas fa-upload"></i> Upload</a>
