updated css to display drawer tabs better, updated enpoints for childProfs, updated asset portion of model throughout

--- a/public/assets.html
+++ b/public/assets.html
@@ -157,7 +157,7 @@
 				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer1')">Drawer 1</button>
 				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer2')">Drawer 2</button>
 		</div>
-		<div id="assetDropdown" class="dropdown-asset">
+		<div id="assetDropdown" class="dropdown-editAsset">
 			<a href="#"><i class="fas fa-edit"></i> Edit</a>
 			<a class="asset-delete" href="#"><i class="fas fa-minus-circle"></i> Delete</a>
 		</div>
