--- a/public/assets.html
+++ b/public/assets.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Overlock|Open+Sans:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="simpleUpload.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="client.js"></script>		
@@ -37,7 +38,7 @@
 					<a href="#">Drawer 1</a>
 					<a href="#">Drawer 2</a>
 					<a onclick="assetOn()" href="#"><i class="fas fa-upload"></i> Upload</a>
-					<a onclick="drawerOn()" href="#"><i class="fas fa-plus"></i>  New Drawer</a>
+					<!-- <a onclick="drawerOn()" href="#"><i class="fas fa-plus"></i>  New Drawer</a> -->
 				</div>
 		</div>
 		<div class="search-container">
@@ -87,11 +88,11 @@
 						<p class="form-title">Add New Child</p>
 						<li>
 						<label for="first-name">First Name</label>
-						<input type="text" id="first-name" placeholder="Enter child's first name here">
+						<input type="text" id="child-first-name" placeholder="Enter child's first name here">
 						</li>
 						<li>
-						<label for="birth-date">Birth Date</label>
-						<input type="text" class="child-birth-date" id="birth-date" placeholder="Enter child's birth date here">
+						<label for="birth-date">Child's Birth Date</label>
+						<input type="text" class="child-birth-date" id="birth-date" placeholder="mm/dd/yyyy">
 						</li>
 						<li>
 						<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
@@ -113,15 +114,22 @@
 						</li>
 						<li>
 						<label for="date-uploaded">Today's Date</label>
-						<input type="text" id="date-uploaded" placeholder="Enter Today's Date">
+						<input type="text" id="date-uploaded" placeholder="Enter Today's Date mm/dd/yyyy">
 						</li>
 						<li>
 							<label for="notes">Notes</label>
 							<input type="text" id="notes" placeholder="Notes">
 						</li>
 						<li>
-							<label for="drawer-title">Drawer Title</label>
+							<label for="drawer-title">Create New Drawer</label>
 							<input type="text" id="drawer-title" placeholder="Drawer Title">
+						</li>
+						<li>
+							<label for="new-drawer-title">Add To Drawer</label>
+							<select id = "current-drawer-titles" name="current-drawer-titles">
+								<option value=`${drawerTitle}`>Drawer 1</option>
+								<option value=`${drawerTitle}`>Drawer 2</option>
+							</select>
 						</li>
 						<li>
 							<label for="image">Image</label>
@@ -159,69 +167,59 @@
 				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer2')">Drawer 2</button>
 		</div>
 		<div id="assetDropdown" class="dropdown-editAsset">
-			<a href="#"><i class="fas fa-edit"></i> Edit</a>
+			<a class="asset-edit(" href="#"><i class="fas fa-edit"></i> Edit</a>
 			<a class="asset-delete" href="#"><i class="fas fa-minus-circle"></i> Delete</a>
 		</div>
 		<div id="Drawer1" class="assettabcontent">
-			<section role="region">
-				<div class="row">
-					<div class="col-4">
+			<!-- <section role="region">
+				<div class="col-4">
 			  		<div class="asset">
 						<img class="asset-image" src="http://image.ibb.co/mrmVQJ/fox.jpg" alt="fox">
 						<div>
 				  		<p class="asset-content"><strong>Fox</strong></p>
 				  		<p class="asset-content">fox sleeping on top of a log in neighborhood</p>
-						</div>
-			  		</div>
 					</div>
-					<div class="col-4">
+			  	</div>
+				<div class="col-4">
 			  		<div class="asset">
 						<img class="asset-image" src="https://image.ibb.co/iXGTRm/lavendar.jpg" alt="lavendar">
 						<div>
 				  		<p class="asset-content"><strong>Lavendar</strong></p>
 				  		<p class="asset-content">Field of beautiful lavendar with bees</p>
-						</div>
-			  		</div>
 					</div>
-					<div class="col-4">
+			  	</div>
+				<div class="col-4">
 			  		<div class="asset">
 						<img class="asset-image" src="https://image.ibb.co/cFzs5J/frog.jpg" alt="frog">
 						<div>
 				  		<p class="asset-content"><strong>Frog</strong></p>
 				  		<p class="asset-content">Little colorful frog, probably poisonous</p>
-						</div>
-			  		</div>
 					</div>
 		  		</div>
-		  
-		  		<div class="row">
-					<div class="col-4">
-			  			<div class="asset">
-							<img class="asset-image" src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon">
-							<div>
-				  				<p class="asset-content"><strong>Antelope Canyon</strong></p>
-				  				<p class="asset-content">Rocks that look like waves.  Can't wait to see this place.</p>
-							</div>
-			  			</div>
-						</div>
-						<div class="col-4">
-			  			<div class="asset">
-							<img class="asset-image" src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids">
-							<div>
-				  				<p class="asset-content"><strong>Orchids</strong></p>
-				  				<p class="asset-content">Beautiful flowers.  So grateful we have a couple of these.</p>
-							</div>
-			  			</div>
-						</div>
-						<div class="col-4">
-			  			<div class="asset">
-							<img class="asset-image" src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca">
-			  				<div>
-				  				<p class="asset-content"><strong>BWCA</strong></p>
-				  				<p class="asset-content">One of my favorite places in the world.</p>
-							</div>
-			  			</div>
+				<div class="col-4">
+			  		<div class="asset">
+						<img class="asset-image" src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon">
+						<div>
+				  		<p class="asset-content"><strong>Antelope Canyon</strong></p>
+				  		<p class="asset-content">Rocks that look like waves.  Can't wait to see this place.</p>
 					</div>
+			  	</div>
+				<div class="col-4">
+			  		<div class="asset">
+						<img class="asset-image" src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids">
+						<div>
+				  		<p class="asset-content"><strong>Orchids</strong></p>
+				  		<p class="asset-content">Beautiful flowers.  So grateful we have a couple of these.</p>
+					</div>
+			  	</div>
+				<div class="col-4">
+			  		<div class="asset">
+						<img class="asset-image" src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca">
+			  			<div>
+				  		<p class="asset-content"><strong>BWCA</strong></p>
+				  		<p class="asset-content">One of my favorite places in the world.</p>
+						</div>
+			  		</div>
 				</div>
 			</section>
 		</div>
@@ -286,7 +284,7 @@
 			  			</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 		</div>		  
 	</main>
 </body>
