--- a/public/assets.html
+++ b/public/assets.html
@@ -163,8 +163,8 @@
 	</section>
 	<main role="main">
 		<div class="tab dropdown-asset">
-				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer1')">Drawer 1</button>
-				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer2')">Drawer 2</button>
+				<!-- <button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer1')">Drawer 1</button>
+				<button class="tablinks dropbtn-asset" onclick="editAsset(), openDrawer(event, 'Drawer2')">Drawer 2</button> -->
 		</div>
 		<div id="assetDropdown" class="dropdown-editAsset">
 			<a class="asset-edit(" href="#"><i class="fas fa-edit"></i> Edit</a>
